--- a/CSS-Files/main-home.css
+++ b/CSS-Files/main-home.css
@@ -1,212 +1,208 @@
 body, html{
-    height: 100%;
- margin: 0%;
-    
-    
-  }
+  height: 100%;
+  margin:0;
   
+  
+}
+
 #header{
-    width: 100%;
-    height: 1000px;
-    overflow: auto;
-    background-image: url("../Pictures/jm-dav-muLm0SUrrf4-unsplash.jpg");
-   background-attachment: fixed;
-   background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 100%;
+  height: 1000px;
+  overflow: auto;
+  background-image: url("../Pictures/jm-dav-muLm0SUrrf4-unsplash.jpg");
+ background-attachment: fixed;
+ background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 #main{
-    width: 100%;
-    height: 2000px;
-    
-    background-image: url("../Pictures/Capture.PNG");
+  width: 100%;
+  height: 2000px;
+  
+  background-image: url("../Pictures/Capture.PNG");
 }
 
 
 /*----------This is NavBar i cili eshte njejt me homepage----*/
 #navbar {
-  background-color: #333; /* Black background color */
-  /* background:transparent; */
-  position: sticky; /* Make it stick/fixed */
-  top: 0; /* Stay on top */
-  width: 100%; /* Full width */
-  transition: top 0.3s; /* Transition effect when sliding down (and up) */
+background-color: #333; /* Black background color */
+/* background:transparent; */
+position: sticky; /* Make it stick/fixed */
+top: 0; /* Stay on top */
+width: 100%; /* Full width */
+transition: top 0.3s; /* Transition effect when sliding down (and up) */
 }
 #navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
-  }
-  
-  #navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
 /*----------This is buttonat i cili eshte njejt me homepage----*/
-  #button-form{
-    /* border: 2px solid black; */
-    margin-left: 1%;
-    margin-top: 0.2%;
-    font-family: 'Lato', sans-serif;
-    width: 5%;
-  }
-  #button-form1{
-   /* border: 2px solid black; */
-   font-family: 'Lato', sans-serif;
-   margin-left: 0.5%;
-   margin-top: 0.2%;
-   width: 5%;
-   height: 5%;
- }
-  
+#button-form{
+  /* border: 2px solid black; */
+  margin-left: 1%;
+  margin-top: 0.2%;
+  font-family: 'Lato', sans-serif;
+  width: 5%;
+}
+#button-form1{
+ /* border: 2px solid black; */
+ font-family: 'Lato', sans-serif;
+ margin-left: 0.5%;
+ margin-top: 0.2%;
+ width: 5%;
+ height: 5%;
+}
 
- h1{
-     margin: 0;
-     color: white;
-     padding-top: 10%;
-     padding-left:25%;
-     font-family: 'Nanum Gothic Coding', monospace;
-     font-weight: 400;
- }
- p{
-   margin-left: 10%;
-   margin-right: 10%;
+
+h1{
+   margin: 0;
    color: white;
-   font-family: 'Cutive Mono', monospace;
-   font-size: 20px;
-   text-align: justify;
- }
- p::first-letter{
-   font-size: 30px;
- }
- h1::first-letter{
-   font-size: 45px;
- }
+   padding-top: 10%;
+   padding-left:25%;
+   font-family: 'Nanum Gothic Coding', monospace;
+   font-weight: 400;
+}
+p{
+ margin-left: 10%;
+ margin-right: 10%;
+ color: white;
+ font-family: 'Cutive Mono', monospace;
+ font-size: 20px;
+ text-align: justify;
+}
+p::first-letter{
+ font-size: 30px;
+}
+h1::first-letter{
+ font-size: 45px;
+}
 
- #dio{
-   text-decoration: none;
-   color: white;
-   border: 1px solid white;
-   padding: 10px;
-   float: right;
-   margin-right: 10%;
- }
- #position{
-   position: absolute;
-   top:8%;
-    left: 21%;
-    /* border:1px solid white; */
-    width: 1000px;  
-    height: 700px;
-    color: black;
-  
-  
-  }
+#dio{
+ text-decoration: none;
+ color: white;
+ border: 1px solid white;
+ padding: 10px;
+ float: right;
+ margin-right: 10%;
+}
+#position{
+ position: absolute;
+ top:8%;
+  left: 21%;
+  /* border:1px solid white; */
+  width: 1000px;  
+  height: 700px;
+  color: black;
 
 
-  /* Google Fonts */
+}
+
+
+/* Google Fonts */
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
 /* Global */
 
 
 .line-1{
-    position: relative;
-    top: 50%;  
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
-    font-weight: bold;
-    color: white;
+  position: relative;
+  top: 50%;  
+  width: 24em;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);    
+  font-weight: bold;
+  color: white;
 }
-
+/* study this one*/
 /* Animation */
 .anim-typewriter{
-  animation: typewriter 4s steps(50) 1s 1 normal both,
-             blinkTextCursor 500ms steps(50) infinite normal;
+animation: typewriter 4s steps(50) 1s 1 normal both,
+           blinkTextCursor 500ms steps(50) infinite normal;
 }
 @keyframes typewriter{
-  from{width: 0;}
-  to{width: 24em;}
+from{width: 0;}
+to{width: 24em;}
 }
 @keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
+from{border-right-color: rgba(255,255,255,.75);}
+to{border-right-color: transparent;}
 }
 * {
-  box-sizing: border-box;
+box-sizing: border-box;
 }
 
 /* Add a gray background color with some padding */
-body {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
-}
+
 
 /* Header/Blog Title */
 .header {
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
+padding: 30px;
+font-size: 40px;
+text-align: center;
+background: white;
 }
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {   
-  float: left;
-  width: 75%;
+float: left;
+width: 75%;
 }
 
 /* Right column */
 .rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
+float: left;
+width: 25%;
+padding-left: 20px;
 }
 
 /* Fake image */
 .fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
+background-color: #aaa;
+width: 100%;
+padding: 20px;
 }
 
 /* Add a card effect for articles */
 .card {
-   background-color: white;
-   padding: 20px;
-   margin-top: 20px;
+ background-color: white;
+ padding: 20px;
+ margin-top: 20px;
 }
 
 /* Clear floats after the columns */
 .row:after {
-  content: "";
-  display: table;
-  clear: both;
+content: "";
+display: table;
+clear: both;
 }
 
 /* Footer */
 .footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
+padding: 20px;
+text-align: center;
+background: #ddd;
+margin-top: 20px;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
+.leftcolumn, .rightcolumn {   
+  width: 100%;
+  padding: 0;
+}
 }
