--- a/CSS-Files/homepagediv1.css
+++ b/CSS-Files/homepagediv1.css
@@ -9,7 +9,7 @@ body, html{
     width: 100%;
     height: 1000px;
     overflow: auto;
-    background-image: url("Pictures/doug-linstedt-jEEYZsaxbH4-unsplash.jpg");
+    background-image: url("../Pictures/doug-linstedt-jEEYZsaxbH4-unsplash.jpg");
    background-attachment: fixed;
    background-position: center;
     background-repeat: no-repeat;
@@ -19,7 +19,7 @@ body, html{
     width: 100%;
     height: 2000px;
     
-    background-image: url("Pictures/Capture.PNG");
+    background-image: url("../Pictures/Capture.PNG");
 }
 
 
