--- a/CSS-Files/news.css
+++ b/CSS-Files/news.css
@@ -289,5 +289,13 @@ body, html{
       color: black;
     }
     /*-------------------------------------------------------------------------*/
-      
+    
+    .all-news {
+      color: white;
+      margin: 5%;
+
+    }
+    .all-news h2 {
+      font-family: 'Special Elite', cursive;
+    }
   
